# ros2-MaxLevitsky

Practice02/src/task01/: package.xml  setup.py
Practice02/src/task01/task01/: receiver.py
Practice02/src/task02/: package.xml  setup.py
Practice02/src/task02/launch/: task02.launch
Practice02/src/task02/task02/: publisher.py
Practice02/src/task03/: package.xml  setup.py
Practice02/src/task03/config/: task03.yaml
Practice02/src/task03/launch/: task03.launch
Practice02/src/task03/task03/: service_node.py
