<?xml version="1.0"?>
<package format="3">
  <name>task02</name>
  <version>0.0.1</version>
  <description>Task 02 - Publisher node</description>
  <maintainer email="student@example.com">student</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
